# chess-base

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deploy.example.yml  deploy.yml  docker-compose.yml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docker.yml  release.yml
assets/eco/: README.md
docs/: architecture.md
docs/decisions/: 0001-single-crate.md  0002-dual-mode-sqlite-postgres.md  0003-zobrist-position-index.md  0004-embed-frontend-single-binary.md  0005-engine-auto-download.md  0006-frontend-board-libs.md  0007-database-ownership-model.md  0008-mcp-jsonrpc-endpoint.md  0009-llm-study-pipeline.md  0010-chess-variant-support.md  0011-request-identity-context.md  0012-engine-manager-websocket.md  0013-llm-provider-client.md  0014-engine-facade-service.md  0015-server-mode-auth.md  0016-mcp-auth-oauth-service-token.md  0016-server-deployment-docker-compose.md  0017-plan-trajectories.md  0018-pre-chewed-db-query-layer.md  0019-interactive-analysis-tool.md  0020-sync-cursor-persistence-and-dedup.md  0021-frontend-typescript.md  0022-bulk-master-pgn-import.md  0023-extended-pgn-export.md  0024-board-overlay-layers.md  0025-embedded-study-assistant.md  0026-danger-map-opening-mode.md  0027-mcp-data-tools-no-internal-llm.md  0028-setup-position-studies.md  0029-generated-study-plan-threat-shapes.md  0030-study-folder-hierarchy.md  0031-design-tokens-dark-mode.md  0032-danger-map-merge-into-study.md  0033-merge-games-into-repertoire-study.md  0034-position-filter-player-color-date.md  0035-annotate-transpositions-in-merged-repertoire-trees.md  0036-mcp-tool-surface-symmetry.md  0037-k8s-deployment-ghcr-bundled-image.md  0038-import-returns-game-ids-content-hash-dedup.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.test.js  App.test.ts  App.vue  api.js  api.test.js  api.test.ts  api.ts  main.js  main.ts  style.css  types.ts
frontend/src/components/: AddLineToStudyDialog.test.ts  AddLineToStudyDialog.vue  AnalysisPanel.vue  AnnotationEditor.vue  Board.vue  BoardControls.test.ts  BoardControls.vue  BoardEvalBar.vue  DangerMapPanel.test.ts  DangerMapPanel.vue  EnginePanel.test.ts  EnginePanel.vue  EnginesSettings.test.js  EnginesSettings.test.ts  EnginesSettings.vue  EvalBar.vue  EvalGraph.test.ts  EvalGraph.vue  FolderTree.vue  GameReviewPanel.test.ts  GameReviewPanel.vue  GenerateDangerMapDialog.test.ts  GenerateDangerMapDialog.vue  GenerateStudyDialog.test.ts  GenerateStudyDialog.vue  HeaderSearch.test.ts  HeaderSearch.vue  MergeGamesDialog.test.ts  MergeGamesDialog.vue  MoveComment.test.ts  MoveComment.vue  MoveList.test.ts  MoveList.vue  MoveTree.test.js  MoveTree.test.ts  MoveTree.vue  MoveTreeLine.vue  PositionExplorer.test.ts  PositionExplorer.vue  SaveAsAnalysisForm.test.ts  (+8 more)
frontend/src/lib/: boardShapes.test.ts  boardShapes.ts  dangerShapes.test.ts  dangerShapes.ts  download.test.ts  download.ts  engineStream.js  engineStream.test.js  engineStream.test.ts  engineStream.ts  fen.js  fen.test.js  fen.test.ts  fen.ts  headerQuery.js  headerQuery.test.js  headerQuery.test.ts  headerQuery.ts  masterShapes.test.ts  masterShapes.ts  moveTree.js  moveTree.test.js  moveTree.test.ts  moveTree.ts  openingTree.js  openingTree.test.js  openingTree.test.ts  openingTree.ts  pgnViewer.js  pgnViewer.test.js  pgnViewer.test.ts  pgnViewer.ts  plansToShapes.test.ts  plansToShapes.ts  positionFilter.test.ts  positionFilter.ts  pv.js  pv.test.js  pv.test.ts  pv.ts  (+6 more)
frontend/src/router/: index.js  index.test.js  index.test.ts  index.ts
frontend/src/stores/: assistant.test.ts  assistant.ts  auth.js  auth.test.js  auth.test.ts  auth.ts  collections.js  collections.test.js  collections.test.ts  collections.ts  danger.test.ts  danger.ts  engine.js  engine.test.js  engine.test.ts  engine.ts  folders.test.ts  folders.ts  (+32 more)
src/: engine.rs  features.rs  ingest.rs  ingest_tests.rs  lib.rs  openings.rs  pgn_tree.rs  plans.rs  position.rs
src/ai/: mod.rs  providers.rs
src/auth/: mod.rs  password.rs  routes.rs  service.rs
src/collectors/: bulk.rs  bulk_tests.rs  chesscom.rs  lichess.rs  mod.rs
src/databases/: mod.rs  routes.rs  tests.rs
src/db/: config.rs  entities.rs  migrator.rs  mod.rs
src/engine/: analysis.rs  bundled.rs  command.rs  download.rs  download_tests.rs  manager.rs  mod.rs  registry.rs  service.rs
src/folders/: mod.rs  routes.rs  tests.rs
src/games/: export.rs  mod.rs  routes.rs  tests.rs
src/imports/: cursor.rs  mod.rs  routes.rs
src/ingest/: parse.rs
src/pgn_tree/: eval.rs  lichess.rs  merge.rs  pgn.rs  shapes.rs  transpositions.rs
src/review/: classify.rs  explain.rs  mod.rs  routes.rs  service.rs
src/search/: headers.rs  headers_elo_tests.rs  headers_tests.rs  mod.rs  position.rs  report.rs  routes.rs
src/server/: auth.rs  browser.rs  config.rs  download.rs  embed.rs  engine_ws.rs  error.rs  identity.rs  mod.rs  routes.rs  state.rs
src/settings/: mod.rs  routes.rs  tests.rs
src/studies/: add_line.rs  add_line_route.rs  add_line_tests.rs  analyse.rs  danger_route.rs  danger_route_tests.rs  mark_transpositions.rs  mark_transpositions_route.rs  mark_transpositions_tests.rs  merge.rs  merge_danger.rs  merge_danger_route.rs  merge_danger_tests.rs  merge_tests.rs  mod.rs  routes.rs  tests.rs
src/study_gen/: annotate.rs  annotate_tests.rs  attack.rs  attack_tests.rs  danger.rs  danger_generate.rs  danger_generate_tests.rs  danger_tests.rs  danger_tree.rs  features.rs  features_tests.rs  generate.rs  generate_tests.rs  mod.rs  plan_shapes.rs  plan_shapes_tests.rs  seed.rs  seed_tests.rs  spine.rs  spine_tests.rs  tree.rs  tree_tests.rs
src/threats/: mod.rs  routes.rs  tests.rs
tests/: assistant.rs  auth.rs  databases.rs  engine.rs  engines_api.rs  folders.rs  games.rs  health.rs  identity.rs  imports.rs  mcp.rs  mcp_analysis.rs  mcp_db.rs  mcp_seed.rs  mcp_studies.rs  oauth.rs  review.rs  search.rs  settings_api.rs  studies.rs  threats_api.rs
tests/common/: mod.rs
(+72 files in other folders)
