[package]
name = "chess-base"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/martinmiksanik/chess-base"
description = "Self-hosted ChessBase-like app: collect, store, search and study chess games with engine analysis."
default-run = "chess-base"

[lib]
name = "chess_base"
path = "src/lib.rs"

[[bin]]
name = "chess-base"
path = "src/bin/chess-base.rs"

[dependencies]
# Chess
shakmaty = "0.30"
pgn-reader = "0.29"

# Async / web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "stream"] }

# Persistence
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }

# Engine
vampirc-uci = "0.11"

# Migrations use #[async_trait::async_trait]
async-trait = "0.1"

# Auth (server mode): Argon2 password hashing + timestamps for sessions
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# MCP OAuth 2.1: PKCE S256 verification (SHA-256 + base64url)
sha2 = "0.10"
base64 = "0.22"

# Serialization / errors / logging / CLI
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

# Misc
rust-embed = { version = "8", features = ["mime-guess"] }
open = "5"
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
# build.rs ensures frontend/dist exists so rust-embed always compiles.

[profile.release]
strip = true
